--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "File Sharing API",
   "main": "app.js",
   "dependencies": {
+    "@azure/storage-blob": "^12.2.0-preview.1",
     "archiver": "^4.0.1",
     "axios": "^0.19.2",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
-    "colorful-log": "^1.0.7",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -17,13 +17,12 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
-    "node-cron": "^2.0.3",
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
-    "passport-google-oauth": "^2.0.0",
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.2.1",
     "pg-hstore": "^2.3.3",
+    "redis": "^3.0.2",
     "sequelize": "^5.21.13",
     "socket.io": "^2.3.0",
     "typedi": "^0.8.0",
