--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "devDependencies": {},
   "scripts": {
     "start": "node src/app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\""
   },
   "author": "Pathamesh More",
   "license": "ISC"
