--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "multer-azure-blob-storage": "^1.0.2",
+    "node-schedule": "^1.3.2",
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
