--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "node-schedule": "^1.3.2",
+    "nodemon": "^2.0.4",
     "pg": "^8.2.1",
     "pg-hstore": "^2.3.3",
     "redis": "^3.0.2",
