Fix Status code

--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
   "devDependencies": {},
   "scripts": {
     "start": "node src/app.js",
+    "dev": "nodemon src/app.js",
     "test": "echo \"Error: no test specified\""
   },
-  "author": "Pathamesh More",
+  "author": "Prathamesh More",
   "license": "ISC"
 }
